# team-forge-ts

./: .gitignore  CHANGELOG.md  README.md  index.html  package.json  pnpm-lock.yaml  thoughtseed-seedforge-note.md  vite.config.ts
config/: tauri-skill-suite.txt
docs/: engagement-playbook.md  huly-system-design.md
scripts/: export-team-kpi-feed.mjs  export-teamforge-tauri-icons.sh  generate-teamforge-dock-icon-batch.sh  huly-client.mjs  launch-thoughtseed-paperclip.sh  list-tauri-skills.sh  p0-enums-and-classes.mjs  p0-tag-hierarchies.mjs  p0-workspace-normalize.mjs  p1-seed-operational-data.mjs  publish-ota-release.mjs  refresh-tauri-skills.sh  review-teamforge-dock-icons.py  teamforge-vault-parity.mjs
sidecar/: .env.example  README.md  package.json  pnpm-lock.yaml
src/: App.tsx  vite-env.d.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/migrations/: 001_initial.sql
src-tauri/src/: lib.rs  main.rs  paperclip.rs  vault.rs
src-tauri/src/clockify/: client.rs  mod.rs  sync.rs  types.rs
src-tauri/src/commands/: mod.rs
src-tauri/src/db/: mod.rs  models.rs  queries.rs
src-tauri/src/github/: client.rs  sync.rs  types.rs
src-tauri/src/huly/: client.rs  mod.rs  naming.rs  sync.rs  types.rs
src-tauri/src/ops/: mod.rs
src-tauri/src/slack/: client.rs  sync.rs  types.rs
src-tauri/src/sync/: alerts.rs  mod.rs  scheduler.rs  teamforge_worker.rs
tasks/: lessons.md  teamforge-vault-parity-canary.json  teamforge-vault-parity-report.json  todo.md
tests/: updater.test.ts
(+112 files in other folders)
